<package format="3">
    <name>vizanti</name>
    <version>0.1.0</version>
    <description>A mission planner and visualizer for controlling outdoor ROS robots.</description>
    <maintainer email="vid.rijavec@gmail.com">MoffKalast</maintainer>
    <maintainer email="albradford2468@gmail.com">Alastair Bradford</maintainer>
    <license>BSD</license>

    <author email="vid.rijavec@gmail.com">MoffKalast</author>

    <depend>std_srvs</depend>
    <depend>tf2_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <!-- Custom interfaces broken out -->
    <depend>vizanti_interfaces</depend>
    <depend>python3-flask</depend>
    <depend>rosbridge_suite</depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
