<package format="2">
    <name>vizanti</name>
    <version>0.1.0</version>
    <description>A mission planner and visualizer for controlling outdoor ROS robots.</description>
    <maintainer email="vid.rijavec@gmail.com">MoffKalast</maintainer>
    <license>BSD</license>

    <author email="vid.rijavec@gmail.com">MoffKalast</author>
    <depend>rospy</depend>
    <depend>dynamic_reconfigure</depend>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>actionlib_msgs</build_export_depend>
    <build_export_depend>move_base_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>python3-flask</exec_depend>
    <exec_depend>rosbridge_suite</exec_depend>

</package>
