<package format="3">
    <name>vizanti</name>
    <version>0.1.0</version>
    <description>Web mission planner and visualizer for controlling outdoor ROS robots.</description>
    <maintainer email="vid.rijavec@gmail.com">MoffKalast</maintainer>
    <maintainer email="albradford2468@gmail.com">Alastair Bradford</maintainer>
    <license>BSD</license>
    <author email="vid.rijavec@gmail.com">MoffKalast</author>
    <url type="bugtracker">https://github.com/MoffKalast/vizanti/issues</url>
    <url type="repository">https://github.com/MoffKalast/vizanti/tree/ros2</url>

    <buildtool_depend>ament_cmake_core</buildtool_depend>

    <exec_depend>vizanti_msgs</exec_depend>
    <exec_depend>vizanti_server</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>