<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vizanti_demos</name>
  <version>0.0.2</version>
  <description>Demonstration package for Vizanti</description>
  <maintainer email="vid.rijavec@gmail.com">MoffKalast</maintainer>
  <maintainer email="albradford2468@gmail.com">Alastair Bradford</maintainer>
  <license>BSD</license>
  <author email="vid.rijavec@gmail.com">MoffKalast</author>
  <url type="bugtracker">https://github.com/MoffKalast/vizanti/issues</url>
  <url type="repository">https://github.com/MoffKalast/vizanti/tree/ros2</url>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vizanti_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
