<package format="3">
    <name>vizanti_msgs</name>
    <version>0.1.0</version>
    <description>Interfaces for Vizanti.</description>
    <maintainer email="vid.rijavec@gmail.com">MoffKalast</maintainer>
    <maintainer email="albradford2468@gmail.com">Alastair Bradford</maintainer>
    <license>BSD</license>
    <author email="vid.rijavec@gmail.com">MoffKalast</author>
    <url type="bugtracker">https://github.com/MoffKalast/vizanti/issues</url>
    <url type="repository">https://github.com/MoffKalast/vizanti/tree/ros2</url>

    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
